@@ -29,8 +29,6 @@ Say 'LPARNAME=' getenv('LPARNAME')
 Not yet implemented are:
 
 - capture output by means of ADDRESS 'HERCULES' command WITH OUTPUT STEM 
-- interactive trace input from the console
-- stack underflow reads (pull) from the console
 
 
 Jan Jaeger
